# rust-browser-mcp

./: .gitignore  ARCHITECTURE_REVIEW.md  Cargo.toml  ISSUE.md  ISSUE_TESTS.md  README.md  RECIPE_SYSTEM.md  TODO.md  tests_todo.md
.github/workflows/: release.yml
examples/: README.md  advanced_monitoring.rs  http_client.rs  oauth_client.rs  oauth_client_simple.rs  oauth_demo_server.rs  stdio_client.rs
src/: client.rs  config.rs  driver.rs  error.rs  keycloak-setup.md  keycloak.rs  lib.rs  main.rs  oauth.rs  pool.rs  server.rs  tools.rs
src/auth/: mod.rs  oauth.rs
src/handlers/: drivers.rs  elements.rs  mod.rs  navigation.rs  page.rs  performance.rs  recipes.rs
src/recipes/: execution.rs  manager.rs  mod.rs  recipe.rs
src/servers/: http.rs  mod.rs  stdio.rs
src/tools/: automation.rs  driver_management.rs  mod.rs  performance.rs  recipes.rs
tests/: integration_tests.rs  stdio_multi_browser.rs  stdio_multi_browser_recipe_execution.rs  stdio_performance_comprehensive.rs  stdio_sequential_multi_browser_screenshots.rs  test_architecture.rs  test_mode_separation.rs  test_recipe_execution.rs
tests/common/: mod.rs
